# mailganer

./: .env.example  .gitignore  README.md  pyproject.toml
mailganer/: celery.py  settings.py  urls.py
send_message/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
send_message/migrations/: 0001_initial.py  0002_auto_20221124_1511.py  0003_auto_20221124_1555.py  0004_auto_20221124_1707.py  0005_message_send_time.py
subscribers/: admin.py  models.py
subscribers/migrations/: 0001_initial.py
